--- a/themes/hugolb/static/ng-template/resume.html
+++ b/themes/hugolb/static/ng-template/resume.html
@@ -33,6 +33,29 @@
 	</div>
 </div>
 
+<div class="section" ng-show="res.length">
+	<h2 class="h2">Research</h2>
+	<div class="research subsection" ng-repeat="r in res = (resumeData.research | filter:search | lowercase)">
+		<h3 class="h4 workplace">{{r.title}}</h4>
+		<h4 class="h4 time">{{r.time}}</h4>
+		<div class="details">
+			<div class="subheading" ng-if="r.advisor.length">Advisor: {{r.advisor}}</div>
+			<div ng-if="r.description.length">{{r.description}}</div>
+			<ul ng-if="r.achievements.length">
+				<li ng-repeat="entry in r.achievements">{{entry}}</li>
+			</ul>
+		</div>
+		<div class="links" ng-if="r.links.length">
+			<div class="subheading">Link(s): </div>
+			<div class="link" ng-repeat="link in r.links"><a href={{link.url}}>{{link.title}}</a></div>
+		</div>
+		<div class="technologies" ng-if="r.technologies.length">
+			<div class="subheading">Technology: </div>
+			<div class="tech" ng-repeat="tech in r.technologies">{{tech}}</div>
+		</div>
+	</div>
+</div>
+
 <div class="section" ng-show="exps.length">
 	<h2 class="h2">Experience</h2>
 	<div class="experience subsection" ng-repeat="exp in exps = (resumeData.experience | filter:search | lowercase)">
