new post + partial theme

--- a/about/index.html
+++ b/about/index.html
@@ -97,21 +97,30 @@
 
 <div class="content">
     <h1 class="page-title">About Me</h1>
-    <p>Hi. My name is Ibrahim. I am a Masters/PhD student at Vanderbilt University with a
+    <p>Hi. My name is Ibrahim. I am a PhD student at Vanderbilt University with a
 concentration in Electrical Engineering (EE). I also have a double major in EE and
 physics.</p>
 
 <p>I am interested in electronics, computer vision, machine learning, web &amp; mobile
 development, and astrophysics.</p>
 
-<p>Currently my research is on adaptive fault tolerant systems using reinforcement
-learning. My undergratuate research was in astrophysics concerning dark matter
-simulations, and in electronics concerning the design of test interfaces for
-radiation hardening experiments.</p>
+<p>Currently my <a href="https://github.com/hazrmard/QLearning">research is in Artificial Intelligence</a>. My undergratuate research was
+in <a href="https://github.com/hazrmard/DarkMatterHalos">astrophysics concerning dark matter simulations</a>. I also did research concerning
+radiation hardening experiments for electronics in space.</p>
 
 <p>I like to run, and play tennis, football and video games. I read
 fiction, cook (<em>because no meal plan for grad students :(</em>), and work on personal
 <a href="/project/">projects</a>.</p>
+
+<p>Here&rsquo;s a video I made regarding my current research. The video was for my
+fellowship with the Vanderbilt Institute of Digital Learning where I&rsquo;m
+exploring new ways of teaching using digital media.</p>
+
+
+<div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
+  <iframe src="//www.youtube.com/embed/72nivTdLpgc" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" allowfullscreen frameborder="0" title="YouTube Video"></iframe>
+ </div>
+
 
 </div>
     <div class="footer">
