pdf resume + content updates

--- a/about/index.html
+++ b/about/index.html
@@ -105,7 +105,7 @@ physics.</p>
 development, and astrophysics.</p>
 
 <p>Currently my <a href="https://github.com/hazrmard/QLearning">research is in Artificial Intelligence</a>. My undergratuate research was
-in <a href="https://github.com/hazrmard/DarkMatterHalos">astrophysics concerning dark matter simulations</a>. I also did research concerning
+in <a href="https://github.com/hazrmard/DarkMatterHalos">astrophysics on dark matter simulations</a>. I also did research on
 radiation hardening experiments for electronics in space.</p>
 
 <p>I like to run, and play tennis, football and video games. I read
