resume json update + projects

--- a/project/gobol/index.html
+++ b/project/gobol/index.html
@@ -43,7 +43,7 @@
     <br/>
     <div class="navigation">
     
-        <a href="/project/adembargo/"><div class="prev">
+        <a href="/project/goinit/"><div class="prev">
             ← Previous Project
         </div></a>
     
