--- a/project/ng-resume/index.html
+++ b/project/ng-resume/index.html
@@ -43,7 +43,7 @@
     <br/>
     <div class="navigation">
     
-        <a href="/project/universe/"><div class="prev">
+        <a href="/project/personalized-group-mail/"><div class="prev">
             ← Previous Project
         </div></a>
     
