pruned resume + minor fixes

--- a/project/poormansnn/index.html
+++ b/project/poormansnn/index.html
@@ -43,7 +43,7 @@
     <br/>
     <div class="navigation">
     
-        <a href="/project/feature-track/"><div class="prev">
+        <a href="http://iahmed.me/project/feature-track/"><div class="prev">
             ← Previous Project
         </div></a>
     
