prepended dates to posts + notebook script

--- a/themes/hugolb/static/ng-template/resume.html
+++ b/themes/hugolb/static/ng-template/resume.html
@@ -1,6 +1,6 @@
 ﻿
 <div class="top-inp-pdf">
-	<input type="text" autofocus="autofocus" placeholder="Search resume" ng-model="search"/>
+	<input type="text" autofocus="autofocus" placeholder="Search résumé" ng-model="search"/>
 	<div ng-if="resumeData.pdf_link.length"><a href="{{resumeData.pdf_link}}">PDF Version</a></div>
 </div></br>
 
