--- a/project/feature-track/index.html
+++ b/project/feature-track/index.html
@@ -64,7 +64,7 @@
     <br/>
     <div class="navigation">
     
-        <a href="http://iahmed.me/project/qlearning/"><div class="prev nav-item">
+        <a href="http://iahmed.me/project/urdown/"><div class="prev nav-item">
             ← Previous Project
         </div></a>
     
